Revert "Merge remote-tracking branch 'origin/v1.18.x' into v1.18.x"
This reverts commit fd09efac61327b1f837017cebccdfd1a7cc7cae4, reversing
changes made to cc8b7b1fa7b37291f463faca79e90f83ddb1909d.