@@ -20,7 +20,7 @@ import net.minecraft.resources.ResourceLocation;
 
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Objects;
 
 
@@ -46,9 +46,6 @@ public class SkillProgressButton extends Button{
 				texture = ability1.getIcon();
 				ability = ability1;
 			}
-		} else {
-			// FIXME :: There is a second where all abilities will still be shown as obtainable - maybe because the server packet has not been handled yet?
-			texture = AbilityButton.BLANK_TEXTURE;
 		}
 
 		if(texture == AbilityButton.BLANK_TEXTURE)
@@ -78,7 +75,7 @@ public class SkillProgressButton extends Button{
 		DragonStateProvider.getCap(Minecraft.getInstance().player).ifPresent(cap -> {
 			if(ability != null){
 				ChatFormatting format =  Objects.equals(cap.getType(), DragonTypes.CAVE) ? ChatFormatting.DARK_RED :  Objects.equals(cap.getType(), DragonTypes.SEA) ? ChatFormatting.AQUA :  Objects.equals(cap.getType(), DragonTypes.FOREST) ? ChatFormatting.GREEN : ChatFormatting.WHITE;
-				ArrayList<Component> description = new ArrayList<>(List.of(((TranslatableComponent) ability.getTitle()).withStyle(format).append(" (" + ability.getLevel() + " / " + ability.getMaxLevel() + ")")));
+				ArrayList<Component> description = new ArrayList<>(Arrays.asList(((TranslatableComponent)ability.getTitle()).withStyle(format).append(" (" + ability.getLevel() + " / " + ability.getMaxLevel() + ")")));
 
 				if(ability.getLevelUpInfo().size() > 0)
 					description.addAll(ability.getLevelUpInfo());
